--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
   <title>{{title}}</title>
   <link rel="stylesheet" href="/stylesheets/style.css" />
 </head>
+
 <body>
 
   <nav>
@@ -16,8 +18,9 @@
     <a href="/auth/logout">Logout</a>
   </nav>
 
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
   {{{body}}}
-
   <script src="/javascripts/script.js"></script>
 </body>
+
 </html>
