removed legends fixed charts and working on containers

--- a/views/T1.hbs
+++ b/views/T1.hbs
@@ -1,6 +1,7 @@
-<div class='container' sm4>
-    {{#each arr}}
-    {{> weeklyDonut}}
-    {{/each}}
-
+<div class="row no-gutters">
+    <div class="col-3">
+        {{#each arr}}
+        {{> weeklyDonut}}
+        {{/each}}
+    </div>
 </div>
