fixed flex issue

--- a/views/overview.hbs
+++ b/views/overview.hbs
@@ -1,7 +1,7 @@
-<div class="container" id="overview">
-    <div class="weeklys container col-4">
-        {{#each arr}}
+<div class="container row" id="overview">
+    {{#each arr}}
+    <div class="container col-md-4">
         {{> weeklyDonut}}
-        {{/each}}
     </div>
+    {{/each}}
 </div>
