charts color changed

--- a/views/overview.hbs
+++ b/views/overview.hbs
@@ -1,7 +1,10 @@
-<div class="container row" id="overview">
-    {{#each arr}}
-    <div class="container col-md-4">
-        {{> weeklyDonut}}
+<div>
+
+
+    <div class="container-fluid row" id="overview">
+        {{#each arr}}
+        <div class="container col-md-1">
+            {{> weeklyDonut}}
+        </div>
+        {{/each}}
     </div>
-    {{/each}}
-</div>
