--- a/views/partials/weeklyDonut.hbs
+++ b/views/partials/weeklyDonut.hbs
@@ -1,5 +1,5 @@
 {{this}}
-<canvas id="myChart-{{this}}" width="50" height="50"></canvas>
+<canvas id="myChart-{{this}}" width="16" height="16"></canvas>
 <script>
   Chart.defaults.global.legend.display = false;
   var baseUrl = "http://localhost:8000";
@@ -8,17 +8,15 @@
   var myChart = new Chart(ctx, {
     type: 'doughnut',
     data: {
-      labels: ['Medication', 'Rest', 'Yellow', 'Green', 'Purple', 'Orange'],
+      labels: ['Medication', 'Visitation', 'Excercise', 'Rest'],
       datasets: [{
         label: '# of Votes',
-        data: [19, 3, 5, 2, 3, 1],
+        data: [1, 1, 2, 8],
         backgroundColor: [
-          '#477998',
-          '#C4D6B0',
-          'F64740',
-          'rgba(75, 192, 192, 0.2)',
-          'rgba(153, 102, 255, 0.2)',
-          'rgba(255, 159, 64, 0.2)'
+          '#EFF1F3',
+          '#DBD3D8',
+          '#D8B4A0',
+          '#D77A61'
         ],
         borderColor: [
           'rgba(255, 99, 132, 1)',
@@ -28,7 +26,7 @@
           'rgba(153, 102, 255, 1)',
           'rgba(255, 159, 64, 1)'
         ],
-        borderWidth: 1
+        borderWidth: 0
       }]
     },
 
