background and sidepanel

--- a/views/overview.hbs
+++ b/views/overview.hbs
@@ -1,9 +1,10 @@
+<div style="height: 300px;" id="overview-top">
+    <button class="openbtn" onclick="openNav()">&#9776; Account Details</button>
+</div>
 <div>
-
-
     <div class="container-fluid row" id="overview">
         {{#each arr}}
-        <div class="container col-md-1">
+        <div class="container col-md-2">
             {{> weeklyDonut}}
         </div>
         {{/each}}
