--- a/views/partials/weeklyDonut.hbs
+++ b/views/partials/weeklyDonut.hbs
@@ -13,10 +13,10 @@
         label: '# of Votes',
         data: [1, 1, 2, 8],
         backgroundColor: [
-          '#EFF1F3',
+          '#D77A61',
           '#DBD3D8',
           '#D8B4A0',
-          '#D77A61'
+          '#EFF1F3'
         ],
         borderColor: [
           'rgba(255, 99, 132, 1)',
