--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -46,6 +46,22 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
   {{{body}}}
   <script src="/javascripts/script.js"></script>
+
+  {{!-- Adding a Side panel from : https://www.w3schools.com/howto/howto_js_collapse_sidepanel.asp --}}
+  <div id="mySidepanel" class="sidepanel">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <a href="#">About</a>
+    <a href="#">First Name - Last Name </a>
+    <a href="#">Age: </a>
+    <a href="#">Gender: </a>
+    <a href="#">Patient ID </a>
+    <a href="#">Pregnancy</a>
+    <a href="#">Cancer</a>
+  </div>
+
+
+
+
 </body>
 
 </html>
