--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,8 +1,32 @@
 <div class="container-fluid row" id="start-page">
   <div class="container col-md-6" id="left-side">
-    <h2>Welcome to {{title}}</h2>
+    <h2 color=red;>Prescriptions Simplified.<br>
+      Healthcare Visualised.<br>
+
+    </h2>
     <br><br>
-    <p>Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum</p>
+    <p>There are at-least 100 applications to deliver you drugs to door, remind you to take them on time to build drug
+      dose consistency, and several others to monitor your health.<b> The American National Health Bureau hopes they
+        work as
+        efficiently as they promise.</b>
+      <br><br>
+    </p>
+    <h5>
+      <b>Post-Med helps tackle the 3.82B USD loss globally by implementing visual simplicity and inclusivity for users
+        of all age
+        education and technical ability.</b>
+    </h5>
+    <p>
+      <br><br>
+      Hospitals are complex machines but the most efficient ones
+      are simple and easier to navigate than your house, especially in distress. Similarly we help remove Age,
+      Education, and Digital Nativeness Bias which in the medical world are responsible for 7000 deaths annually in USA
+      alone with 3.82B worldwide lost in efficiency due to complicated interfaces.
+      <br><br>
+      Plus we work offline too, meaning, a doctor can send a visual prescription out to the remotest part of the world
+      without being concerned about language and educational barrier.
+
+    </p>
 
     <br><br>
 
