--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,10 +11,10 @@
     <form action="/login" method="POST" id="login-form">
       <div class="row">
         <div class="col-md-5" style="padding-left: 0">
-          <input type="text" class="form-control" placeholder="Email" name="login-email">
+          <input type="text" class="form-control" placeholder="Email" name="email">
         </div>
         <div class="col-md-5" style="padding-left: 0">
-          <input type="text" class="form-control" placeholder="Password" name="login-password">
+          <input type="password" class="form-control" placeholder="Password" name="password">
         </div>
         <div class="col-md-2" style="padding-left: 0">
           <button type="submit" class="form-control btn btn-primary">Login</button>
@@ -33,15 +33,15 @@
 
       <form action="/signup" method="POST" id="signup-form">
         <div class="row">
-          <input class="form-control" type="text" name="signup-first" placeholder="Firstname">
+          <input class="form-control" type="text" name="firstName" placeholder="Firstname">
         </div>
         <br>
         <div class="row">
-          <input class="form-control" type="text" name="signup-last" placeholder="Lastname">
+          <input class="form-control" type="text" name="lastName" placeholder="Lastname">
         </div>
         <br>
         <div class="row">
-          <select class="form-control" name="signup-country">
+          <select class="form-control" name="country">
             <option selected>Country</option>
             <option>United States</option>
             <option>Germany</option>
@@ -54,35 +54,28 @@
         <div class="row">
           <div class="col-md-6 p-0">
             <label for="signup-birthdate">Birthdate</label>
-            <input type="text" class="form-control" id="signup-birthdate" placeholder="YYYY-MM-DD"
-              name="signup-birthdate" required>
-            <div class="invalid-tooltip">
-              Please provide a valid birthdate in the following format: YYYY-MM-DD
-            </div>
+            <input type="text" class="form-control" id="signup-birthdate" placeholder="YYYY-MM-DD" name="birthDate">
           </div>
           <div class="col-md-5 p-0 ml-auto">
             <label for="signup-gender">Gender</label>
-            <select class="form-control" id="signup-gender" name="signup-gender">
+            <select class="form-control" id="signup-gender" name="gender">
               <option selected>select</option>
               <option>male</option>
               <option>female</option>
               <option>other</option>
             </select>
-            <div class="invalid-tooltip">
-              Please select a gender.
-            </div>
           </div>
         </div>
         <br>
         <div class="row">
-          <input class="form-control" type="text" name="username-signup" placeholder="Email" name="signup-email">
+          <input class="form-control" type="text" placeholder="Email" name="email">
         </div>
         <br>
         <div class="row">
-          <input class="form-control" type="password-signup" name="signup-password" placeholder="password">
+          <input class="form-control" type="password" name="password" placeholder="password">
         </div>
-        {{#if message }}
-        <div class="error-message">{{ message }}</div>
+        {{#if signMessage }}
+        <div class="error-message">{{ signMessage }}</div>
         {{/if}}
         <br><br>
         <div class="row">
