--- a/views/partials/weeklyDonut.hbs
+++ b/views/partials/weeklyDonut.hbs
@@ -1,10 +1,41 @@
-{{this}}
 <canvas id="myChart-{{this}}" width="16" height="16"></canvas>
 <script>
+
+  Chart.Chart.pluginService.register({
+    beforeDraw: function (chart) {
+      if (chart.config.centerText.display !== null &&
+        typeof chart.config.centerText.display !== 'undefined' &&
+        chart.config.centerText.display) {
+        drawTotals(chart);
+      }
+    },
+  });
+
+  function drawTotals(chart) {
+
+    var width = chart.chart.width,
+      height = chart.chart.height,
+      ctx = chart.chart.ctx;
+
+    ctx.restore();
+    var fontSize = (height / 114).toFixed(2);
+    ctx.font = fontSize + "em sans-serif";
+    ctx.textBaseline = "middle";
+
+    var text = chart.config.centerText.text,
+      textX = Math.round((width - ctx.measureText(text).width) / 2),
+      textY = height / 2;
+
+    ctx.fillText(text, textX, textY);
+    ctx.save();
+  }
+
+
   Chart.defaults.global.legend.display = false;
   var baseUrl = "http://localhost:8000";
   var ctx = document.getElementById('myChart-{{this}}').getContext('2d');
   // chart creation
+
   var myChart = new Chart(ctx, {
     type: 'doughnut',
     data: {
@@ -29,6 +60,10 @@
         borderWidth: 0
       }]
     },
+    centerText: {
+      display: true,
+      text: "{{this}}"
+    }
 
      {{!-- {{
       options: {
