--- a/views/partials/weeklyDonut.hbs
+++ b/views/partials/weeklyDonut.hbs
@@ -19,7 +19,7 @@
 
     ctx.restore();
     var fontSize = (height / 114).toFixed(2);
-    ctx.font = fontSize + "em sans-serif";
+    ctx.font = fontSize + "courier";
     ctx.textBaseline = "middle";
 
     var text = chart.config.centerText.text,
