--- a/views/overview.hbs
+++ b/views/overview.hbs
@@ -4,8 +4,10 @@
 <div>
     <div class="container-fluid row" id="overview">
         {{#each arr}}
-        <div class="container col-md-2">
+        <div class="container col-md-2" id="circles"">
             {{> weeklyDonut}}
         </div>
         {{/each}}
     </div>
+
+    <div style=" height: 300px;" id="overview-top"></div>
