--- a/views/index.hbs
+++ b/views/index.hbs
@@ -122,7 +122,7 @@
         <div class="media block-6 services d-block">
           {{!-- <div class="icon"><span class="flaticon-resume"></span></div> --}}
           <div class="media-body">
-            <h3 class="heading mb-3" style="color:white;">Search Millions of Jobs</h3>
+            <h3 class="heading mb-3" style="color:white;">Can't Read this? All Good.</h3>
             <p style="color:white;">A small river named Duden flows by their place and supplies.</p>
           </div>
         </div>
@@ -131,7 +131,7 @@
         <div class="media block-6 services d-block">
           <div class="icon"><span class="flaticon-collaboration"></span></div>
           <div class="media-body">
-            <h3 class="heading mb-3" style="color:white;">Easy To Manage Jobs</h3>
+            <h3 class="heading mb-3" style="color:white;">Analysis: Drugs / Users</h3>
             <p style="color:white;">A small river named Duden flows by their place and supplies.</p>
           </div>
         </div>
@@ -140,7 +140,7 @@
         <div class="media block-6 services d-block">
           <div class="icon"><span class="flaticon-promotions"></span></div>
           <div class="media-body">
-            <h3 class="heading mb-3" style="color:white;">Top Careers</h3>
+            <h3 class="heading mb-3" style="color:white;">Scratch Card Prescription</h3>
             <p style="color:white;">A small river named Duden flows by their place and supplies.</p>
           </div>
         </div>
@@ -149,7 +149,7 @@
         <div class="media block-6 services d-block">
           <div class="icon"><span class="flaticon-employee"></span></div>
           <div class="media-body">
-            <h3 class="heading mb-3" style="color:white;">Search Expert Candidates</h3>
+            <h3 class="heading mb-3" style="color:white;">We make it all simpler.</h3>
             <p style="color:white;">A small river named Duden flows by their place and supplies.</p>
           </div>
         </div>
