--- a/views/index.hbs
+++ b/views/index.hbs
@@ -49,13 +49,12 @@
         {{/if}}
       </div>
     </form>
-    <button id="callSignup">Sign Up</button>
   </div>
 
   <div class="container col-md-6" id="right-side">
     <div class="ml-auto col-md-6" style="margin-top: 20%">
 
-      <form action="/signup" method="POST" id="signup-form" style="display: none;">
+      <form action="/signup" method="POST" id="signup-form">
         <h2>Signup</h2>
         <div class="row">
           <input class="form-control" type="text" name="firstName" placeholder="Firstname">
