--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -24,6 +24,6 @@
 
   <p class="account-message">
     Do you already have an account?
-    <a href="/auth/login">Login</a>
+    <a href="/">Login</a>
   </p>
 </form>
