--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -32,8 +32,13 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav ml-auto">
+      {{#ifvalue user.role value="doctor"}}
+      <a class="nav-item nav-link" href="/auth/addActivity">Add an Activity</a>
+      {{/ifvalue}}
+      {{#if user}}
       <a class="nav-item nav-link active" href="/summary">Treatments<span class="sr-only">(current)</span></a>
       <a class="nav-item nav-link" href="#">Profile</a>
+      {{/if}}
       <a class="nav-item nav-link" href="#">About</a>
       {{#if user}}
       <a class="nav-item nav-link" href="/logout">Sign out</a>
