--- a/views/weeks.hbs
+++ b/views/weeks.hbs
@@ -7,10 +7,10 @@
 <div class="container-fluid row">
     {{!-- <div class="col-1" id="overview-top"></div> --}}
     <div class="col-md-6" id="overview-top">
-        <div class="row-md-6" id="overview-top">
+        <div id="overview-top">
             {{> weeklyDonut}}
         </div>
-        <div class="row-md-6" id="overview-top">TEXT TEXT</div>
+        <div id="overview-top">TEXT TEXT</div>
     </div>
 
     {{!-- <div class="col-1" id="overview-top"></div> --}}
