--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -46,6 +46,13 @@ a {
   background-image: url("/images/Endless-Constellation.svg");
 }
 
+.myOverview {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 #overview-top2 {
   height: 20vh;
   background-image: url("/images/Endless-Constellation.svg");
