--- a/views/overview.hbs
+++ b/views/overview.hbs
@@ -4,7 +4,7 @@
 <div>
     <div class="container-fluid row" id="overview">
         {{#each arr}}
-        <div class="container col-md-2" id="circles"">
+        <div class="container col-md-2" id="circles">
             {{> weeklyDonut}}
         </div>
         {{/each}}
