--- a/views/partials/weeklyDonut.hbs
+++ b/views/partials/weeklyDonut.hbs
@@ -62,23 +62,10 @@
     },
     centerText: {
       display: true,
-      text: "{{this}}"
+      text: "{{@index}}"
     }
 
-     {{!-- {{
-      options: {
-        legend: {
-          display: false
-        },
-        scales: {
-          yAxes: [{
-            ticks: {
-              beginAtZero: true
-            }
-          }]
-        }
-      }
-    }} --}}
 
-    })
+
+  })
 </script>
