--- a/views/auth/addActivity.hbs
+++ b/views/auth/addActivity.hbs
@@ -1,131 +1,133 @@
-<h1>Hey Doctor</h1>
-<br><br>
-<h2>Add an activity here</h2>
-<br><br>
-<div class="container-fluid row" style="justify-content: center">
-  <form action="/auth/addActivity" method="POST" id="add-act" style="width: 60vw;">
-    <div class="form-group row">
-      <div class="col-md-6">
-        <label for="">Type of Activity</label>
-        <select class="form-control" name="category">
-          <option selected>select</option>
-          <option>medication</option>
-          <option>doctor</option>
-          <option>course</option>
-          <option>work</option>
-        </select>
+<div style="height: 100vh;">
+  <h1>Hey Doctor</h1>
+  <br><br>
+  <h2>Add an activity here</h2>
+  <br><br>
+  <div class="container-fluid row" style="justify-content: center">
+    <form action="/auth/addActivity" method="POST" id="add-act" style="width: 60vw;">
+      <div class="form-group row">
+        <div class="col-md-6">
+          <label for="">Type of Activity</label>
+          <select class="form-control" name="category">
+            <option selected>select</option>
+            <option>medication</option>
+            <option>doctor</option>
+            <option>course</option>
+            <option>work</option>
+          </select>
+        </div>
+        <div class="col-md-6">
+          <label for="">Add a Comment</label>
+          <input class="form-control" type="text" name="info" placeholder="add a comment">
+        </div>
       </div>
-      <div class="col-md-6">
-        <label for="">Add a Comment</label>
-        <input class="form-control" type="text" name="info" placeholder="add a comment">
-      </div>
-    </div>
-    <div class="form-group row">
-      <div class="col-md-6">
-        <div class="row float-left">
-          <div class="col-md-6">
-            <label for="">Start Date</label>
-            <input type="date" name="stDa" id="">
+      <div class="form-group row">
+        <div class="col-md-6">
+          <div class="row float-left">
+            <div class="col-md-6">
+              <label for="">Start Date</label>
+              <input type="date" name="stDa" id="">
+            </div>
+            <div class="col-md-6">
+              <label for="">Time</label>
+              <select class="form-control" name="stTi">
+                <option selected>select</option>
+                <option>06:00</option>
+                <option>06:30</option>
+                <option>07:00</option>
+                <option>07:30</option>
+                <option>08:00</option>
+                <option>08:30</option>
+                <option>09:00</option>
+                <option>09:30</option>
+                <option>10:00</option>
+                <option>10:30</option>
+                <option>11:00</option>
+                <option>11:30</option>
+                <option>12:00</option>
+                <option>12:30</option>
+                <option>13:00</option>
+                <option>13:30</option>
+                <option>14:00</option>
+                <option>14:30</option>
+                <option>15:00</option>
+                <option>15:30</option>
+                <option>16:00</option>
+                <option>16:30</option>
+                <option>17:00</option>
+                <option>17:30</option>
+                <option>18:00</option>
+                <option>18:30</option>
+                <option>19:00</option>
+                <option>19:30</option>
+                <option>20:00</option>
+                <option>20:30</option>
+                <option>21:00</option>
+                <option>21:30</option>
+                <option>22:00</option>
+                <option>22:30</option>
+                <option>23:00</option>
+              </select>
+            </div>
           </div>
-          <div class="col-md-6">
-            <label for="">Time</label>
-            <select class="form-control" name="stTi">
-              <option selected>select</option>
-              <option>06:00</option>
-              <option>06:30</option>
-              <option>07:00</option>
-              <option>07:30</option>
-              <option>08:00</option>
-              <option>08:30</option>
-              <option>09:00</option>
-              <option>09:30</option>
-              <option>10:00</option>
-              <option>10:30</option>
-              <option>11:00</option>
-              <option>11:30</option>
-              <option>12:00</option>
-              <option>12:30</option>
-              <option>13:00</option>
-              <option>13:30</option>
-              <option>14:00</option>
-              <option>14:30</option>
-              <option>15:00</option>
-              <option>15:30</option>
-              <option>16:00</option>
-              <option>16:30</option>
-              <option>17:00</option>
-              <option>17:30</option>
-              <option>18:00</option>
-              <option>18:30</option>
-              <option>19:00</option>
-              <option>19:30</option>
-              <option>20:00</option>
-              <option>20:30</option>
-              <option>21:00</option>
-              <option>21:30</option>
-              <option>22:00</option>
-              <option>22:30</option>
-              <option>23:00</option>
-            </select>
+        </div>
+        <div class="col-md-6">
+          <div class="row float-left">
+            <div class="col-md-6">
+              <label for="">End Date</label>
+              <input type="date" name="endDa" id="">
+            </div>
+            <div class="col-md-6">
+              <label for="">Time</label>
+              <select class="form-control" name="endTi">
+                <option selected>select</option>
+                <option>06:00</option>
+                <option>06:30</option>
+                <option>07:00</option>
+                <option>07:30</option>
+                <option>08:00</option>
+                <option>08:30</option>
+                <option>09:00</option>
+                <option>09:30</option>
+                <option>10:00</option>
+                <option>10:30</option>
+                <option>11:00</option>
+                <option>11:30</option>
+                <option>12:00</option>
+                <option>12:30</option>
+                <option>13:00</option>
+                <option>13:30</option>
+                <option>14:00</option>
+                <option>14:30</option>
+                <option>15:00</option>
+                <option>15:30</option>
+                <option>16:00</option>
+                <option>16:30</option>
+                <option>17:00</option>
+                <option>17:30</option>
+                <option>18:00</option>
+                <option>18:30</option>
+                <option>19:00</option>
+                <option>19:30</option>
+                <option>20:00</option>
+                <option>20:30</option>
+                <option>21:00</option>
+                <option>21:30</option>
+                <option>22:00</option>
+                <option>22:30</option>
+                <option>23:00</option>
+              </select>
+            </div>
           </div>
         </div>
       </div>
-      <div class="col-md-6">
-        <div class="row float-left">
-          <div class="col-md-6">
-            <label for="">End Date</label>
-            <input type="date" name="endDa" id="">
-          </div>
-          <div class="col-md-6">
-            <label for="">Time</label>
-            <select class="form-control" name="endTi">
-              <option selected>select</option>
-              <option>06:00</option>
-              <option>06:30</option>
-              <option>07:00</option>
-              <option>07:30</option>
-              <option>08:00</option>
-              <option>08:30</option>
-              <option>09:00</option>
-              <option>09:30</option>
-              <option>10:00</option>
-              <option>10:30</option>
-              <option>11:00</option>
-              <option>11:30</option>
-              <option>12:00</option>
-              <option>12:30</option>
-              <option>13:00</option>
-              <option>13:30</option>
-              <option>14:00</option>
-              <option>14:30</option>
-              <option>15:00</option>
-              <option>15:30</option>
-              <option>16:00</option>
-              <option>16:30</option>
-              <option>17:00</option>
-              <option>17:30</option>
-              <option>18:00</option>
-              <option>18:30</option>
-              <option>19:00</option>
-              <option>19:30</option>
-              <option>20:00</option>
-              <option>20:30</option>
-              <option>21:00</option>
-              <option>21:30</option>
-              <option>22:00</option>
-              <option>22:30</option>
-              <option>23:00</option>
-            </select>
-          </div>
-        </div>
+      {{#if message }}
+      <div class="error-message">{{ message }}</div>
+      {{/if}}
+      <br><br>
+      <div class="col">
+        <button type="submit" class="form-control btn btn-primary" style="width: 30%;">Submit</button>
       </div>
-    </div>
-    {{#if message }}
-    <div class="error-message">{{ message }}</div>
-    {{/if}}
-    <br><br>
-    <div class="col">
-      <button type="submit" class="form-control btn btn-primary" style="width: 30%;">Submit</button>
-    </div>
-  </form>
+    </form>
+  </div>
 </div>
