--- a/views/weeks.hbs
+++ b/views/weeks.hbs
@@ -6,7 +6,7 @@
 </div>
 <div class="container-fluid row">
     {{!-- <div class="col-1" id="overview-top"></div> --}}
-    <div class="col-md-6" id="overview-top">
+    <div class="col-md-6 myOverview" id="overview-top">
         <div id="overview-top">
             {{> weeklyDonut}}
         </div>
