--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,6 +10,10 @@
     <h2 color=red;>Prescriptions Simplified.<br>
       Healthcare Visualised.<br>
 
+      <div style="margin-top: 5%">
+        <button type=" submit" class="form-control btn btn-warning" onclick="showSignup()">Sign Up</button>
+      </div>
+
     </h2>
     <br><br>
     <p>There are at-least 100 applications to deliver drugs to your door, remind you to take them on time to build drug
@@ -46,6 +50,7 @@
         {{/if}}
       </div>
     </form>
+
   </div>
 
   <div class="container col-md-6" id="right-side">
