--- a/views/overview.hbs
+++ b/views/overview.hbs
@@ -1,4 +1,27 @@
-<div style="height: 300px;" id="overview-top">
+<div style="height: 200px;" id="overview-top">
+
+    <div class="container row">
+        <div class="container col-md-6" style="margin-top: 50px">
+            <h2 color=red;>Your Weekly Schedule.<br>
+                And Progress.<br>
+            </h2>
+
+            <div class="progress">
+                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+            </div>
+        </div>
+        <div class="container col-md-4" style="margin-top: 50px">
+            <div class="alert alert-success" role="alert">
+                Your are on your workout schedule!
+            </div>
+
+            <div class="alert alert-danger" role="alert">
+                You are not taking enough rest!
+            </div>
+        </div>
+    </div>
+</div>
 
 </div>
 <div>
@@ -10,4 +33,4 @@
         {{/each}}
     </div>
 
-    <div style=" height: 300px;" id="overview-top"></div>
+    <div style=" height: 200px;" id="overview-top"></div>
