--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -26,6 +26,19 @@ a {
   background-size: cover;
 }
 
+#left-side {
+  padding-right: 70px;
+  padding-left: 70px;
+}
+
+#signup-form {
+  visibility: hidden;
+}
+
+// Home Page Styling Ends
+
+// Other pages
+
 #overview {
   background-image: url("/images/Endless-Constellation.svg");
 }
@@ -39,12 +52,23 @@ a {
 #overview-top {
   background-image: url("/images/Endless-Constellation.svg");
 }
-
+//------------detail weekly donut---------
+.myDetailDonut {
+  width: 100%;
+  object-fit: contain;
+}
 .myOverview {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+#weeklyText {
+  align-content: center;
+  padding: 0 100px;
+  margin-top: 50px;
+  background-image: url("/images/Endless-Constellation.svg");
 }
 
 #overview-top2 {
@@ -60,6 +84,8 @@ a {
   width: 0; /* 0 width - change this with JavaScript */
   position: fixed; /* Stay in place */
   z-index: 1; /* Stay on top */
+  align-content: center; // Ani added this
+  justify-content: center; // Ani added this
   top: 0;
   left: 0;
   background-color: #eff1f3; /* Black*/
@@ -124,4 +150,18 @@ footer li {
 .dark-background {
   background: black;
   color: white;
+}
+
+.sidepanelbody {
+}
+
+// CSS for about Page Begin
+
+.card-deck {
+  padding: 100px 150px;
+}
+
+// CSS for about Page End
+
+.toast {
 }
