--- a/views/weeks.hbs
+++ b/views/weeks.hbs
@@ -10,7 +10,8 @@
         <div id="overview-top">
             {{> weeklyDonut}}
         </div>
-        <div id="overview-top">TEXT TEXT</div>
+        <div id="weeklyText"> TEXT TEXTTEXT TEXTTEXT TEXTTEXT TEXTTEXT TEXTTEXT TEXTTEXT TEXTTEXT TEXTTEXT TEXTTEXT
+            TEXTTEXT TEXTTEXT TEXTTEXT TEXTTEXT TEXTTEXT TEXT<br>TEXT TEXTTEXT TEXTTEXT TEXT></div>
     </div>
 
     {{!-- <div class="col-1" id="overview-top"></div> --}}
