--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -135,4 +135,7 @@ footer li {
 .card-deck {
   padding: 100px 150px; }
 
+.addactivity {
+  background-image: url("/images/Endless-Constellation.svg"); }
+
 /*# sourceMappingURL=style.css.map */
