--- a/views/index.hbs
+++ b/views/index.hbs
@@ -26,6 +26,10 @@
       <b>Post-Med helps tackle the 3.82B USD loss globally by implementing visual simplicity and inclusivity for users
         of all age
         education and technical ability.</b>
+      <br>
+      <br>
+      Note: This is a protoype website.
+
     </h6>
 
 
