--- a/views/weeks.hbs
+++ b/views/weeks.hbs
@@ -10,8 +10,7 @@
         <div id="overview-top">
             {{> weeklyDonut}}
         </div>
-        <div id="weeklyText"> TEXT TEXTTEXT TEXTTEXT TEXTTEXT TEXTTEXT TEXTTEXT TEXTTEXT TEXTTEXT TEXTTEXT TEXTTEXT
-            TEXTTEXT TEXTTEXT TEXTTEXT TEXTTEXT TEXTTEXT TEXT<br>TEXT TEXTTEXT TEXTTEXT TEXT></div>
+        <div id="weeklyText">{{randomTips pregTips}}</div>
     </div>
 
     {{!-- <div class="col-1" id="overview-top"></div> --}}
