--- a/views/auth/addActivity.hbs
+++ b/views/auth/addActivity.hbs
@@ -1,4 +1,4 @@
-<div style="height: 100vh;">
+<div style="height: 100vh;" id="add activity">
   <h1>Hey Doctor</h1>
   <br><br>
   <h2>Add an activity here</h2>
