--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -64,9 +64,9 @@
   <div id="mySidepanel" class="sidepanel">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 
-    <div class="card text-white" style="max-width: 18rem;">
-      <img src="/images/doggy.jpg" class="card-img-top" alt="...">
-      <h5 class="card-title"><a href="#">{{user.firstName}} {{user.lastName}} </a></h5>
+    <div class="sidepanelText card text-white d-flex justify-content-center ml-5 mr-5 mb-2 pb-3">
+      <img src="/images/doggy.jpg" class="card-img-top mb-3" alt="...">
+      <a href="#">{{user.firstName}} {{user.lastName}} </a>
 
       <a href="#">DOB: {{formatDate user.birthDate}} </a>
       <a href="#">{{user.gender}}</a>
@@ -75,20 +75,17 @@
 
     </div>
 
-    <div>
-      <br>
-      <br>
-      <p>DISCLAIMER<p>
-          <br>
-          <p>
-            If you feel like flat Earth theory has gotten unaccountably popular recently, you’re right. According to
-            Google
-            Trends, search interest in the flat Earth conspiracy theory has already had several distinct peaks in the
-            last
-            year. (“The last year” was 2017, not 1519, just to be clear.) It’s funny, weird, and while it’s certainly
-            not at
-            the top of our list of problems as a society, it’s not entirely innocent either. ITS FUCKING CONCERNING.
-          </p>
+    <div class="disclaimer d-flex justify-content-center flex-wrap ml-4 mr-4">
+      <h5 class="mt-2 mb-2">DISCLAIMER</h5>
+      <p class="mt-2 mb-2">
+        If you feel like flat Earth theory has gotten unaccountably popular recently, you’re right. According to
+        Google
+        Trends, search interest in the flat Earth conspiracy theory has already had several distinct peaks in the
+        last
+        year. (“The last year” was 2017, not 1519, just to be clear.) It’s funny, weird, and while it’s certainly
+        not at
+        the top of our list of problems as a society, it’s not entirely innocent either. ITS FUCKING CONCERNING.
+      </p>
 
     </div>
   </div>
@@ -111,14 +108,11 @@
         <li><a href="https://www.instagram.com" target="_blank" class="link">Instagram</a></li>
       </ul> --}}
     </div>
-    <div class="container col-md-6">
-      {{!-- <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2624.142047744348!2d2.3354330160472316!3d48.87456857928921!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66e38f817b573%3A0x48d69c30470e7aeb!2sIronhack!5e0!3m2!1sen!2ses!4v1495208746099"
-        class="map-frame" frameborder="0" style="border:0" allowfullscreen>
-      </iframe> --}}
-      <iframe src="https://giphy.com/gifs/1d7F9xyq6j7C1ojbC5/html5" class="map-frame" frameborder="0" style="border:0 "
-        allowfullscreen>
-      </iframe>
+    <div class="container col-md-6 doggy-container">
+
+      <iframe src="https://giphy.com/embed/1d7F9xyq6j7C1ojbC5" frameBorder="0" class="giphy-embed"
+        allowFullScreen></iframe>
+
     </div>
   </footer>
 
