--- a/views/weeks.hbs
+++ b/views/weeks.hbs
@@ -10,7 +10,7 @@
         <div id="overview-top">
             {{> weeklyDonut}}
         </div>
-        <div id="weeklyText">{{randomTips pregTips}}</div>
+        <div id="weeklyText">{{tip}}</div>
     </div>
 
     {{!-- <div class="col-1" id="overview-top"></div> --}}
