--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -83,7 +83,6 @@ a {
 
 /* The sidepanel links */
 .sidepanel a {
-  padding: 8px 8px 8px 32px;
   text-decoration: none;
   font-size: 25px;
   color: #818181;
@@ -137,5 +136,26 @@ footer li {
 
 .addactivity {
   background-image: url("/images/Endless-Constellation.svg"); }
+
+.doggy-container {
+  height: 300px;
+  width: 300px; }
+
+.giphy-embed {
+  height: 100%;
+  width: 100%; }
+
+.disclaimer {
+  text-align: justify;
+  line-height: 140%; }
+
+.sidepanelText a {
+  padding: 5px 0 2px 0;
+  font-size: 18px;
+  text-align: center; }
+
+#weeklyText {
+  font-size: 18px;
+  text-align: center; }
 
 /*# sourceMappingURL=style.css.map */
